--- a/sass/components/studio/_modal.scss
+++ b/sass/components/studio/_modal.scss
@@ -15,6 +15,7 @@
     }
   }
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -187,6 +188,19 @@
         transition: $transition-time-cubic;
         transition-property: background-color, border-color;
       }
+    }
+  }
+}
+
+@media screen and(max-width:450px) {
+  .modal {
+    max-width: 300px;
+    max-height: 680px;
+    &-text-area {
+      max-width: 240px;
+    }
+    &-input {
+      max-width: 240px;
     }
   }
 }
