--- a/css/main.css
+++ b/css/main.css
@@ -1329,13 +1329,16 @@ address {
 @media screen and (max-width: 450px) {
   .modal {
     max-width: 300px;
-    max-height: 680px;
+    max-height: 600px;
   }
   .modal-text-area {
     max-width: 240px;
   }
   .modal-input {
     max-width: 240px;
+  }
+  .modal-wrapper {
+    padding: 30px;
   }
 }
 /*# sourceMappingURL=main.css.map */
