--- a/css/main.css
+++ b/css/main.css
@@ -1326,10 +1326,13 @@ address {
   transition-property: background-color, border-color;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 449px) {
   .modal {
     max-width: 300px;
     max-height: 600px;
+  }
+  .modal-header {
+    margin-bottom: 15px;
   }
   .modal-form-container {
     margin-bottom: 15px;
