full adaptive site

--- a/old styles/sass/components/_header.scss
+++ b/old styles/sass/components/_header.scss
@@ -90,7 +90,7 @@ header {
     top: 77px;
     width: 100%;
     height: 4px;
-    background-color: var(--accent-color);
+    background-color: $accent-color;
     border-radius: 2px;
   }
 }
