--- a/css/main.css
+++ b/css/main.css
@@ -406,10 +406,33 @@ input {
   UTILITY
  */
 .container {
-  max-width: 480px;
   padding: 0 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .button {
@@ -438,6 +461,45 @@ input {
   display: flex;
 }
 
+.main-nav {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-contacts {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header-contacts li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1230px) {
+  .header-contacts li:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .header-contacts {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .header-logo {
   display: block;
   padding-top: 15px;
@@ -445,25 +507,82 @@ input {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.66;
   color: #000000;
   letter-spacing: 0.78px;
 }
 
-.header-list {
-  display: none;
+@media screen and (min-width: 768px) {
+  .header-logo {
+    padding-top: 20px;
+    padding-bottom: 21px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .header-logo {
+    margin-right: 85px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .header-list {
+    margin-right: auto;
+  }
+}
+
+.header-list > li:not(:last-child) {
+  margin-right: 50px;
 }
 
 .header-link {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  line-height: 1.14;
+  letter-spacing: 0.28px;
+  color: #757575;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 767px) {
+  .header-link {
+    display: none;
+  }
+}
+
+.header-link:hover, .header-link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-property: color, fill;
+  transition-property: color, fill;
 }
 
 .menu {
-  width: 40px;
-  height: 40px;
-  margin-left: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .menu {
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .logo-web {
@@ -474,10 +593,23 @@ header {
   border-bottom: 1px solid #ececec;
 }
 
-.our-pages:hover, .our-pages:focus {
-  color: #2196f3;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
+@media screen and (min-width: 768px) {
+  .our-pages {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    letter-spacing: 0.28px;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    letter-spacing: 0.28px;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
+  }
+  .our-pages:hover, .our-pages:focus {
+    color: #2196f3;
+    -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) color;
+  }
 }
 
 .icon-envelope, .icon-smartphone {
@@ -497,16 +629,14 @@ header {
   top: 77px;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 2px;
 }
 
 .hero-header {
   max-width: 700px;
-  margin: auto;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 120px;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 26px;
@@ -516,6 +646,13 @@ header {
   color: #ffffff;
 }
 
+@media screen and (min-width: 1230px) {
+  .hero-header {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 .hero-button {
   display: inline-block;
   font-weight: 700;
@@ -523,14 +660,21 @@ header {
   line-height: 30px;
   letter-spacing: 0.96px;
   color: #ffffff;
-  margin: auto;
-  margin-bottom: 120px;
   padding: 10px 32px;
   cursor: pointer;
   border: none;
 }
 
 .hero-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   background-size: cover;
   background-position: center;
@@ -538,18 +682,62 @@ header {
   background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/header-img.jpg);
 }
 
+@media screen and (min-width: 768px) {
+  .hero-section {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .hero-section {
+    height: 600px;
+  }
+}
+
 .our-advantages {
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.our-advantages-item:not(:last-child) {
+@media screen and (min-width: 1230px) {
+  .our-advantages {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-advantages-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-advantages-item {
+    width: calc((100% - 90px) / 4);
+  }
+}
+
+.our-advantages-item:nth-child(-n + 2) {
   margin-bottom: 30px;
 }
 
 .our-advantages-item svg {
   margin: 0 auto;
   display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .our-advantages-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .advantages-image {
@@ -562,7 +750,6 @@ header {
 }
 
 .advantage {
-  text-align: center;
   letter-spacing: 0.49px;
   text-transform: uppercase;
   font-size: 14px;
@@ -579,6 +766,12 @@ header {
   display: none;
   text-align: center;
   padding-bottom: 94px;
+}
+
+@media screen and (min-width: 1230px) {
+  .capabilities {
+    display: block;
+  }
 }
 
 .capabilities-list img {
@@ -669,8 +862,34 @@ header {
   padding-bottom: 60px;
 }
 
+@media screen and (min-width: 1230px) {
+  .our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .our-team-title {
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1230px) {
+  .our-team-title {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .our-team-item {
@@ -682,8 +901,32 @@ header {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .our-team-item {
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1230px) {
+  .our-team-item {
+    width: calc((100% - 90px) / 4);
+  }
+}
+
 .our-team-item img {
   max-width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-item img {
+    width: 339px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-team-item img {
+    width: 270px;
+  }
 }
 
 .employee-name {
@@ -709,10 +952,24 @@ header {
   text-align: center;
 }
 
+@media screen and (min-width: 1230px) {
+  .our-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .our-clients-title {
   font-size: 28px;
   line-height: 1.18;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1230px) {
+  .our-clients-title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .our-clients-list {
@@ -726,32 +983,53 @@ header {
           justify-content: space-between;
 }
 
-@media screen and (max-width: 390px) {
-  .our-clients .our-clients-list {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .our-clients .our-clients-item {
-    margin-top: 30px;
-  }
-}
-
 .our-clients-icon {
   fill: #afb1b8;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) fill;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) fill;
 }
 
+.our-clients-item {
+  width: calc((100% - 30px) / 2);
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-clients-item {
+    width: calc((100% - 150px) / 6);
+  }
+}
+
 .our-clients-item:nth-child(n + 3) {
   margin-top: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .our-clients-item:nth-child(n + 3) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-clients-item:nth-child(n + 4) {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-clients-item:nth-child(n + 4) {
+    margin-top: 0px;
+  }
+}
+
 .our-clients-item a {
-  min-width: 180px;
-  max-width: 210px;
+  width: 100%;
   height: 90px;
-  margin: auto;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) border-color;
@@ -778,14 +1056,39 @@ footer {
   background-color: #2f303a;
 }
 
+@media screen and (min-width: 1230px) {
+  .footer-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .footer-list {
-  text-align: center;
   padding-bottom: 28px;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
   padding-top: 60px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1230px) {
+  .footer-list {
+    text-align: center;
+  }
 }
 
 .footer-logo {
@@ -846,7 +1149,7 @@ footer {
   padding-left: 16px;
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 100%;
+  width: 450px;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -854,6 +1157,25 @@ footer {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 450px) {
+  .footer-email-input {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .footer-email-input {
+    width: 358px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .footer-email-input {
+    margin-bottom: 0px;
+    margin-right: 12px;
+  }
 }
 
 .footer-submit {
@@ -888,13 +1210,18 @@ footer {
 }
 
 address {
-  margin-bottom: 60px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.42px;
   color: #ffffff;
+}
+
+@media screen and (max-width: 1230px) {
+  address {
+    margin-bottom: 60px;
+  }
 }
 
 .join-us {
@@ -920,6 +1247,13 @@ address {
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1230px) {
+  .subscribe-us-item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
 .copyright {
   font-size: 12px;
   line-height: 2;
@@ -934,6 +1268,13 @@ address {
 .main-portfolio {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1230px) {
+  .main-portfolio {
+    padding-top: 93px;
+    padding-bottom: 93px;
+  }
 }
 
 .filters-button {
@@ -974,6 +1315,12 @@ address {
   margin-bottom: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .filters-item:nth-child(-1n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 .filters-item:not(:last-child) {
   margin-right: 8px;
 }
@@ -985,6 +1332,39 @@ address {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-bottom: 40px;
+}
+
+@media screen and (min-width: 1230px) {
+  .filters-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .filters-list {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-products-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .our-products-list img {
@@ -1001,8 +1381,26 @@ address {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) box-shadow, 250ms cubic-bezier(0.4, 0, 0.2, 1) -webkit-box-shadow;
 }
 
+@media screen and (min-width: 768px) {
+  .our-products-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-products-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+
 .our-products-item img {
-  max-width: 450px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .our-products-item img {
+    width: 100%;
+  }
 }
 
 .our-products-item:hover, .our-products-item:focus {
@@ -1019,8 +1417,22 @@ address {
           transform: translateY(0);
 }
 
-.our-products-item {
-  margin-top: 30px;
+@media screen and (max-width: 1230px) {
+  .our-products-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1230px) {
+  .our-products-item:not(:nth-child(-n + 2)) {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .our-products-item:not(:nth-child(-n + 3)) {
+    margin-top: 30px;
+  }
 }
 
 .our-products-image {
@@ -1055,8 +1467,8 @@ address {
 .product-description {
   position: absolute;
   top: 0;
-  width: 450px;
-  padding: 78px 24px;
+  width: 100%;
+  padding: 100px 24px;
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.54px;
@@ -1071,6 +1483,18 @@ address {
   transition-property: transform, -webkit-transform;
   -webkit-transform: translateY(101%);
           transform: translateY(101%);
+}
+
+@media screen and (min-width: 768px) {
+  .product-description {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1230px) {
+  .product-description {
+    padding: 65px 24px;
+  }
 }
 
 .products-type {
@@ -1119,6 +1543,13 @@ address {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) -webkit-transform;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) transform;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) transform, 250ms cubic-bezier(0.4, 0, 0.2, 1) -webkit-transform;
+}
+
+@media screen and (min-width: 1230px) {
+  .modal {
+    max-width: 528px;
+    max-height: 581px;
+  }
 }
 
 .modal-close-button {
@@ -1170,6 +1601,12 @@ address {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1230px) {
+  .modal-input {
+    width: 448px;
+  }
 }
 
 .modal-input:focus {
@@ -1234,7 +1671,7 @@ address {
 .modal-checkbox-label:before {
   position: absolute;
   display: block;
-  top: 4px;
+  top: 1px;
   left: 0;
   content: "";
   width: 16px;
@@ -1253,6 +1690,12 @@ address {
   height: 120px;
   padding: 12px 16px;
   resize: none;
+}
+
+@media screen and (min-width: 1230px) {
+  .modal-text-area {
+    width: 448px;
+  }
 }
 
 .modal-text-area:not(:placeholder-shown) ~ .modal-text-area-label,
