--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,8 +2,20 @@ footer {
   background-color: #2f303a;
 }
 .footer {
+  &-form {
+    @media screen and(min-width:1230px) {
+      display: flex;
+    }
+  }
   &-list {
-    text-align: center;
+    @media screen and(min-width:768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+    @media screen and(max-width:1230px) {
+      text-align: center;
+    }
     padding-bottom: 28px;
     align-items: baseline;
     padding-top: 60px;
@@ -56,13 +68,23 @@ footer {
     padding-left: 16px;
     padding-top: 15px;
     padding-bottom: 15px;
-    width: 100%;
+    width: 450px;
+    @media screen and(max-width:450px) {
+      width: 100%;
+    }
+    @media screen and(min-width:1230px) {
+      width: 358px;
+    }
     height: 50px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     margin-bottom: 20px;
+    @media screen and(min-width:1230px) {
+      margin-bottom: 0px;
+      margin-right: 12px;
+    }
   }
 
   &-submit {
@@ -91,7 +113,9 @@ footer {
   }
 }
 address {
-  margin-bottom: 60px;
+  @media screen and(max-width:1230px) {
+    margin-bottom: 60px;
+  }
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -112,6 +136,7 @@ address {
     color: $third-text-color;
   }
 }
+
 .subscribe {
   font-size: 14px;
   font-weight: bold;
@@ -119,6 +144,11 @@ address {
   text-transform: uppercase;
   color: $third-text-color;
   margin-bottom: 20px;
+  &-us-item {
+    @media screen and(min-width:768px) and(max-width:1230px) {
+      flex-basis: 100%;
+    }
+  }
 }
 .copyright {
   font-size: 12px;
