--- a/sass/components/portfolio/_filters.scss
+++ b/sass/components/portfolio/_filters.scss
@@ -27,6 +27,9 @@
 .filters-item {
   &:nth-child(-1n + 3) {
     margin-bottom: 15px;
+    @media screen and(min-width:768px) {
+      margin-bottom: 0;
+    }
   }
   &:not(:last-child) {
     margin-right: 8px;
@@ -35,5 +38,14 @@
 .filters-list {
   display: flex;
   flex-wrap: wrap;
+  @media screen and(min-width:1230px) {
+    justify-content: center;
+  }
   margin-bottom: 40px;
+  @media screen and(min-width:768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and(min-width:1230px) {
+    margin-bottom: 50px;
+  }
 }
