--- a/sass/components/studio/_advantages.scss
+++ b/sass/components/studio/_advantages.scss
@@ -1,12 +1,31 @@
 .our-advantages {
   padding-top: 60px;
   padding-bottom: 60px;
-  &-item:not(:last-child) {
+  @media screen and(min-width:1230px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  &-item {
+    @media screen and(min-width:768px) {
+      width: calc((100% - 30px) / 2);
+    }
+    @media screen and(min-width:1230px) {
+      width: calc((100% - 90px) / 4);
+    }
+  }
+  &-item:nth-child(-n + 2) {
     margin-bottom: 30px;
   }
   &-item svg {
     margin: 0 auto;
     display: block;
+  }
+  &-list {
+    @media screen and(min-width:768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 }
 
@@ -20,7 +39,6 @@
 }
 
 .advantage {
-  text-align: center;
   letter-spacing: 0.49px;
   text-transform: uppercase;
   font-size: 14px;
