--- a/sass/components/studio/_hero.scss
+++ b/sass/components/studio/_hero.scss
@@ -1,15 +1,17 @@
 .hero {
   &-header {
     max-width: 700px;
-    margin: auto;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 120px;
     margin-bottom: 30px;
 
     font-weight: 900;
     font-size: 26px;
     line-height: 1.61;
+    @media screen and(min-width:1230px) {
+      font-size: 44px;
+      line-height: 1.36;
+    }
     letter-spacing: 1.56px;
     text-transform: uppercase;
     color: $third-text-color;
@@ -21,13 +23,21 @@
     line-height: 30px;
     letter-spacing: 0.96px;
     color: $third-text-color;
-    margin: auto;
-    margin-bottom: 120px;
     padding: 10px 32px;
     cursor: pointer;
     border: none;
   }
   &-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media screen and(min-width:768px) {
+      height: 400px;
+    }
+    @media screen and(min-width:1230px) {
+      height: 600px;
+    }
+
     text-align: center;
     background-size: cover;
     background-position: center;
