--- a/sass/components/studio/_modal.scss
+++ b/sass/components/studio/_modal.scss
@@ -25,6 +25,10 @@
   background-color: #ffffff;
   max-width: 450px;
   max-height: 610px;
+  @media screen and(min-width:1230px) {
+    max-width: 528px;
+    max-height: 581px;
+  }
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -69,6 +73,9 @@
   }
   &-input {
     width: 370px;
+    @media screen and(min-width:1230px) {
+      width: 448px;
+    }
     height: 40px;
     padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -114,7 +121,7 @@
     &:before {
       position: absolute;
       display: block;
-      top: 4px;
+      top: 1px;
       left: 0;
       content: "";
       width: 16px;
@@ -128,6 +135,9 @@
   &-text-area {
     display: block;
     width: 370px;
+    @media screen and(min-width:1230px) {
+      width: 448px;
+    }
     height: 120px;
     padding: 12px 16px;
     resize: none;
