--- a/sass/components/studio/_our-clients.scss
+++ b/sass/components/studio/_our-clients.scss
@@ -1,9 +1,17 @@
 .our-clients {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and(min-width:1230px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   text-align: center;
   &-title {
     font-size: 28px;
+    @media screen and(min-width:1230px) {
+      font-size: 36px;
+      margin-bottom: 50px;
+    }
     line-height: 1.18;
     margin-bottom: 30px;
   }
@@ -12,27 +20,38 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  @media screen and(max-width: 390px) {
-    .our-clients-list {
-      justify-content: center;
-    }
-    .our-clients-item {
-      margin-top: 30px;
-    }
-  }
+
   &-icon {
     fill: $icon-fill-color;
     transition: $transition-time-cubic fill;
   }
+  &-item {
+    width: calc((100% - 30px) / 2);
+    @media screen and(min-width:768px) {
+      width: calc((100% - 60px) / 3);
+    }
+    @media screen and(min-width:1230px) {
+      width: calc((100% - 150px) / 6);
+    }
+  }
   &-item:nth-child(n + 3) {
     margin-top: 30px;
+    @media screen and(min-width:768px) {
+      margin-top: 0;
+    }
+  }
+  &-item:nth-child(n + 4) {
+    @media screen and(min-width:768px) {
+      margin-top: 30px;
+    }
+    @media screen and(min-width:1230px) {
+      margin-top: 0px;
+    }
   }
   &-item a {
     @extend %flex-center;
-    min-width: 180px;
-    max-width: 210px;
+    width: 100%;
     height: 90px;
-    margin: auto;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     transition: $transition-time-cubic border-color;
