--- a/sass/components/studio/_our-team.scss
+++ b/sass/components/studio/_our-team.scss
@@ -35,18 +35,45 @@
   background-color: $link-icon-background-color;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and(min-width:1230px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   &-title {
     margin-bottom: 30px;
+    @media screen and(min-width:1230px) {
+      margin-bottom: 60px;
+    }
+  }
+  &-list {
+    @media screen and(min-width:768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
   &-item {
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 0px 0px 4px 4px;
     max-width: 450px;
+    @media screen and(min-width:768px) {
+      width: calc((100% - 60px) / 2);
+      @media screen and(min-width:1230px) {
+        width: calc((100% - 90px) / 4);
+      }
+    }
     background-color: $third-text-color;
     margin-bottom: 30px;
+
     & img {
       max-width: 450px;
+      @media screen and(min-width:768px) {
+        width: 339px;
+      }
+      @media screen and(min-width:1230px) {
+        width: 270px;
+      }
     }
   }
 }
