--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -393,10 +393,28 @@ input {
  */
 
 .container {
-  max-width: 480px;
+  @media screen and (max-width: 480px) {
+    max-width: 450px;
+  }
   padding: 0 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and(min-width:480px) {
+  .container {
+    width: 450px;
+  }
+}
+@media screen and(min-width:768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and(min-width:1230px) {
+  .container {
+    width: 1200px;
+  }
 }
 .button {
   background: $accent-color;
