--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,11 +5,17 @@
 }
 
 .main-nav {
-  justify-content: space-between;
+  @media screen and(max-width:768px) {
+    justify-content: space-between;
+  }
+  align-items: center;
 }
 .header {
   &-contacts {
     & li:not(:last-child) {
+      @media screen and(max-width:767px) {
+        margin-bottom: 16px;
+      }
       margin-bottom: 10px;
       @media screen and(min-width:1230px) {
         margin-bottom: 0;
@@ -28,6 +34,7 @@
     @media screen and(min-width:768px) {
       padding-top: 20px;
       padding-bottom: 21px;
+      margin-right: 80px;
     }
     @media screen and(min-width:1230px) {
       margin-right: 85px;
@@ -41,22 +48,23 @@
     font-size: 24px;
     line-height: 1.66;
     color: #000000;
-    letter-spacing: 0.78px;
+    letter-spacing: 0.38px;
   }
   &-list {
-    @media screen and(max-width:767px) {
-      display: none;
+    @media screen and(min-width:768px) {
+      margin-right: 85px;
     }
     @media screen and(min-width:1230px) {
-      margin-right: auto;
+      margin-right: 305px;
     }
     & > li:not(:last-child) {
       margin-right: 50px;
     }
   }
   &-link {
-    @media screen and(max-width:767px) {
-      display: none;
+    @media screen and(max-width:768px) {
+      font-size: 18px;
+      line-height: 1.66;
     }
     display: flex;
     align-items: center;
@@ -74,19 +82,6 @@
     }
   }
 }
-.menu {
-  display: none;
-}
-.menu {
-  @media screen and(max-width:767px) {
-    display: block;
-    width: 40px;
-    height: 40px;
-    margin-left: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
 
 .logo-web {
   color: $accent-color;
@@ -94,22 +89,21 @@
 header {
   border-bottom: 1px solid #ececec;
 }
-@media screen and(min-width:768px) {
-  .our-pages {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+.our-pages {
+  letter-spacing: 0.28px;
+  color: $primary-text-color;
+  font-weight: 500;
+  letter-spacing: 0.28px;
+  transition: $transition-time-cubic color;
 
-    letter-spacing: 0.28px;
-    color: var(--primary-text-color);
-    font-weight: 500;
-    letter-spacing: 0.28px;
+  &:hover,
+  &:focus {
+    color: $accent-color;
     transition: $transition-time-cubic color;
-
-    &:hover,
-    &:focus {
-      color: $accent-color;
-      transition: $transition-time-cubic color;
+    @media screen and(min-width:768px) {
+      display: block;
+      padding-top: 32px;
+      padding-bottom: 32px;
     }
   }
 }
@@ -126,6 +120,12 @@ header {
   color: $accent-color;
   position: relative;
   &::after {
+    @media screen and(max-width:768px) {
+      top: 30px;
+    }
+    @media screen and(min-width:768px) {
+      top: 45px;
+    }
     content: "";
     display: block;
     position: absolute;
@@ -134,5 +134,81 @@ header {
     height: 4px;
     background-color: $accent-color;
     border-radius: 2px;
+  }
+}
+.menu-button {
+  display: none;
+}
+.menu-button {
+  @media screen and(max-width:767px) {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    & .menu-icon-crosshair {
+      display: none;
+    }
+    &.is-open .menu-icon-crosshair {
+      display: block;
+    }
+    &.is-open .menu-icon-menu {
+      display: none;
+    }
+  }
+}
+.navigation {
+  display: flex;
+  align-items: center;
+  @media screen and(max-width:767px) {
+    display: none;
+  }
+  &.is-open {
+    @media screen and(max-width:767px) {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      padding: 60px 0;
+
+      background-color: #ffffff;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04),
+        0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    }
+  }
+}
+
+.header {
+  &-contacts {
+    @media screen and(max-width:767px) {
+      align-items: center;
+    }
+  }
+  &-list {
+    & > li:last-child {
+      @media screen and(max-width:767px) {
+        margin-bottom: 60px;
+      }
+    }
+    & > li:not(:last-child) {
+      @media screen and(max-width:767px) {
+        margin-right: 0px;
+        margin-bottom: 40px;
+      }
+    }
+    @media screen and(max-width:767px) {
+      flex-direction: column;
+      align-items: center;
+      font-size: 18px;
+      line-height: 1.66;
+    }
+  }
+  @media screen and(max-width:767px) {
+    position: relative;
   }
 }
