--- a/css/main.css
+++ b/css/main.css
@@ -1029,7 +1029,12 @@ header {
 }
 
 .our-team-item img {
-  max-width: 450px;
+  width: 100%;
+  height: 320px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 
 @media screen and (min-width: 768px) {
