--- a/sass/components/studio/_our-team.scss
+++ b/sass/components/studio/_our-team.scss
@@ -67,7 +67,10 @@
     margin-bottom: 30px;
 
     & img {
-      max-width: 450px;
+      width: 100%;
+      height: 320px;
+      object-fit: cover;
+      object-position: top;
       @media screen and(min-width:768px) {
         width: 339px;
       }
