--- a/css/main.css
+++ b/css/main.css
@@ -610,7 +610,7 @@ header {
 }
 
 @media screen and (min-width: 768px) {
-  .our-pages:hover, .our-pages:focus {
+  .our-pages {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -646,7 +646,7 @@ header {
 
 @media screen and (min-width: 768px) {
   .current-page::after {
-    top: 45px;
+    top: 76px;
   }
 }
 
@@ -1867,7 +1867,7 @@ address {
   width: 12px;
   height: 9px;
   position: absolute;
-  top: 7px;
+  top: 5px;
   left: 2px;
   pointer-events: none;
 }
