--- a/sass/components/portfolio/_our-products.scss
+++ b/sass/components/portfolio/_our-products.scss
@@ -82,13 +82,6 @@
     top: 0;
     width: 100%;
     padding: 100px 24px;
-    @media screen and(min-width:768px) {
-      padding: 49px 24px;
-    }
-    @media screen and(min-width:1230px) {
-      padding: 65px 24px;
-    }
-
     font-size: 18px;
     line-height: 1.55;
     letter-spacing: 0.54px;
@@ -99,6 +92,16 @@
     transition: $transition-time-cubic;
     transition-property: transform;
     transform: translateY(101%);
+    @media screen and(max-width:340px) {
+      padding: 30px 10px;
+      font-size: 17px;
+    }
+    @media screen and(min-width:768px) {
+      padding: 49px 24px;
+    }
+    @media screen and(min-width:1230px) {
+      padding: 65px 24px;
+    }
   }
   &s-type {
     font-size: 16px;
